--- a/q/273990.html
+++ b/q/273990.html
@@ -26,10 +26,10 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>020</td><td>APL+WIN</td><td>240708T145932Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/274016#274016">Graham</a></td></tr>
-<tr d-ix="1"><td>007</td><td>Vyxal</td><td>240707T225405Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273994#273994">emanresu</a></td></tr>
-<tr d-ix="2"><td>046</td><td>Haskell</td><td>240708T224853Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/274031#274031">DPD-</a></td></tr>
-<tr d-ix="3"><td>067</td><td>Google Sheets</td><td>240708T191207Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/274029#274029">doubleun</a></td></tr>
+<tr d-ix="0"><td>051</td><td>Google Sheets</td><td>240708T191207Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/274029#274029">doubleun</a></td></tr>
+<tr d-ix="1"><td>020</td><td>APL+WIN</td><td>240708T145932Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/274016#274016">Graham</a></td></tr>
+<tr d-ix="2"><td>007</td><td>Vyxal</td><td>240707T225405Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273994#273994">emanresu</a></td></tr>
+<tr d-ix="3"><td>046</td><td>Haskell</td><td>240708T224853Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/274031#274031">DPD-</a></td></tr>
 <tr d-ix="4"><td>022</td><td>Wolfram Language Mathematica</td><td>240708T163409Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/274025#274025">att</a></td></tr>
 <tr d-ix="5"><td>007</td><td>MATL</td><td>240707T222154Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273993#273993">Luis Men</a></td></tr>
 <tr d-ix="6"><td>058</td><td>Ruby</td><td>240708T105955Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/274010#274010">G B</a></td></tr>
@@ -41,14 +41,27 @@
 <tr d-ix="12"><td>011</td><td>PARI/GP</td><td>240708T023321Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273995#273995">alephalp</a></td></tr>
 <tr d-ix="13"><td>012</td><td>Charcoal</td><td>240707T221329Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273992#273992">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>APL+WIN, <s>19</s> 20 bytes</h1>
+<div id="pu0" class="pu"><h1>Google Sheets, 51 bytes</h1>
+<pre><code>lambda(a,b,sum(byrow(b,lambda(r,sumproduct(a,r)))))
+</code></pre>
+<p>This is a Google Sheets lambda function that expects two parameters: <code>a</code> should point to a 1D array that contains the first row in the matrix, and <code>b</code> should point to a 2D array that holds the rest of the rows in the matrix.</p>
+<p>The function assumes that the matrix in the format specified in the question, and returns <code>0</code> if it is a Hadamard matrix and a non-zero value otherwise. In the event of a 1x1 matrix like <code>[1]</code>, <code>a</code> should point to the matrix and <code>b</code> should point to a null array of zero rows, and the formula will return <code>0</code>.</p>
+<p><img src="https://i.sstatic.net/IUf2tdWk.png" alt="screenshot" /></p>
+<p>You can call the function like this:</p>
+<pre><code>=lambda(a, b, 
+  sum(byrow(b, lambda(r, sumproduct(a, r)))) 
+)(A1:D1, A2:D4)
+</code></pre>
+<p>...where <code>a</code> is <code>A1:D1</code> and <code>b</code>is <code>A2:D4</code>.</p>
+</div>
+<div id="pu1" class="pu"><h1>APL+WIN, <s>19</s> 20 bytes</h1>
 <p>+1 to fix problem identified by att</p>
 <p>Prompts for matrix. 1 = true, 0 = false</p>
 <pre><code>(×/⍴m)=+/+/|m+.×⍉m←⎕
 </code></pre>
 <p><a href="https://tio.run/##SyzI0U2pTMzJT9dNzkksLs5M/v@ob6qvz6O2CcZcQJanP5BlyPWooz3tv8bh6fqPerfkatpq62vr1@Rq6x2e/qi3MxeoAqjyP1AN1/80LhMFE6AiQwUYPLQeQUJohAiYxZXGZaRgBNcDFONCmIKmFsUcdHGwUUAOSCMXpkNQIUwrFHMBAA" rel="nofollow noreferrer" title="APL (Dyalog Classic) – Try It Online">Try it online! Thanks to Dyalog Classic</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 7 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 7 bytes</h1>
 <pre><code>ÞḊ²$@Π=
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCLDnuG4isKyJEDOoD0iLCIiLCJbWzEgLDEsIDEsIDFdLFsxLCAtMSwgIDEsIC0xLF0sWzEsIDEsIC0xLCAtMV0sWzEsLTEsLTEsIDFdXSJd" rel="nofollow noreferrer">Try it Online!</a> -1 thanks to att.</p>
@@ -59,7 +72,7 @@
      Π  # To the power of itself?
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, <s><a href="https://play.haskell.org/saved/2oQ5zBTo" rel="nofollow noreferrer">47</a></s>, 46 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, <s><a href="https://play.haskell.org/saved/2oQ5zBTo" rel="nofollow noreferrer">47</a></s>, 46 bytes</h1>
 <ul>
 <li>-1 byte thanks to <a href="https://codegolf.stackexchange.com/users/20260/xnor">xnor</a></li>
 </ul>
@@ -72,19 +85,6 @@
 <li>we check that for all other rows in <code>y</code> the scalar product with the current row <code>x</code> is zero</li>
 <li>then we repeat the check discarding the first row (Haskell works well with recursion)</li>
 </ul>
-</div>
-<div id="pu3" class="pu"><h1>Google Sheets, 67 bytes</h1>
-<pre><code>lambda(a,b,sort(min(n(byrow(b,lambda(r,sum(n(a=r))))=count(a)/2))))
-</code></pre>
-<p>This is a Google Sheets lambda function that expects two parameters: <code>a</code> should point to a 1D array that contains the first row in the matrix, and <code>b</code> should point to a 2D array that holds the rest of the rows in the matrix.</p>
-<p>The function assumes that the matrix in the format specified in the question, and returns <code>1</code> if it is a Hadamard matrix and <code>0</code> otherwise. In the event of a 1x1 matrix like <code>[1]</code>, <code>a</code> should point to the matrix and <code>b</code> should point to a null array of zero rows, and the formula will signal <code>true</code> with <code>#VALUE!</code>.</p>
-<p><img src="https://i.sstatic.net/IUf2tdWk.png" alt="screenshot" /></p>
-<p>You can call the function like this:</p>
-<pre><code>=lambda(a, b, 
-  sort(min(n(byrow(b, lambda(r, sum(n(a = r)))) = count(a) / 2))) 
-)(A1:D1, A2:D4)
-</code></pre>
-<p>...where <code>a</code> is <code>A1:D1</code> and <code>b</code>is <code>A2:D4</code>.</p>
 </div>
 <div id="pu4" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 22 bytes</h1>
 <pre><code>#^#&amp;@Tr[1^#]==Det@#^2&amp;
