--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240709T162739Z
+"   /golfscore                                      20240709T163137Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/230873.html">Help Alice fix her text!                        : 0230873</a>
 <a href="q/225808.html">Interpret underload                             : 0225808</a>
 <a href="q/273990.html">Is this a Hadamard matrix?                      : 0273990</a>
 <a href="q/274018.html">Keyboard Ping Pong                              : 0274018</a>
