--- a/q/274018.html
+++ b/q/274018.html
@@ -26,9 +26,9 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>013</td><td>Jelly</td><td>240710T020442Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274050#274050">Jonathan</a></td></tr>
-<tr d-ix="1"><td>019</td><td>05AB1E</td><td>240709T080208Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274038#274038">Kevin Cr</a></td></tr>
-<tr d-ix="2"><td>055</td><td>Python</td><td>240708T170630Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274027#274027">Mukundan</a></td></tr>
+<tr d-ix="0"><td>054</td><td>Python</td><td>240708T170630Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274027#274027">Mukundan</a></td></tr>
+<tr d-ix="1"><td>013</td><td>Jelly</td><td>240710T020442Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274050#274050">Jonathan</a></td></tr>
+<tr d-ix="2"><td>019</td><td>05AB1E</td><td>240709T080208Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274038#274038">Kevin Cr</a></td></tr>
 <tr d-ix="3"><td>nan</td><td>Vyxal</td><td>240709T051457Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274035#274035">lyxal</a></td></tr>
 <tr d-ix="4"><td>051</td><td>JavaScript ES6</td><td>240708T161437Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274023#274023">Arnauld</a></td></tr>
 <tr d-ix="5"><td>023</td><td>Charcoal</td><td>240708T225518Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274032#274032">Neil</a></td></tr>
@@ -37,13 +37,21 @@
 <tr d-ix="8"><td>030</td><td>sed r</td><td>240708T164928Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274026#274026">guest430</a></td></tr>
 <tr d-ix="9"><td>031</td><td>Perl 5 p</td><td>240708T162921Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274024#274024">Xcali</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 13 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <sup><s>69</s> <s>62</s> <s>60</s> <s>58</s> <s>55</s></sup> 54 bytes</h1>
+<p>-7 bytes thanks to <a href="https://codegolf.stackexchange.com/users/20260/xnor">@xnor</a>. I independently arrived at a similar solution (only the first -4 though) since I didn't notice their comment for a while.<br />
+-1 byte thanks to <a href="https://codegolf.stackexchange.com/users/101374/albert-lang">@Albert.Lang</a></p>
+<p>Takes input as a bytestring</p>
+<pre class="lang-python prettyprint-override"><code>lambda x,n=35782400:len({(n:=~n)&gt;&gt;j%32&amp;1for j in x})%2
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=dZDNSgMxFIVxO09xCVQSmCm19acUplCwiqBTsUIXtYvYydC0aSZOMtgi-iJuuqlP4Mvo05j52dROLySB851z7yWfX2ptZrHcbCPw4Wmbmshr_5wLunwOKaxc6bfOLtrN00ajI5jEb1h2_A9Jut15rdU8PoniBObAJazeSa1Zpr8zVXDJMhArG2uQjgO2uFQusJWyo5ZUYW2Suj3cipm9rpXgBiMPEZLbC2d--4BMkjLk5CBOjQURtv3qTE7jkOEyohIuDR6jq97NLXIB3feGQzQZlz1sbuJCwlSSRYnlXte6rEyK3Te_R229YMrwKddLyMsrnmy80w8uB6O7fvAI--wlpdJws4YKFnKtmACoYgu6pgtdzSjs1g6jlSyiQjPHMG0OwtHDILg-mJxx_cqFiCgXe_DfOjuw-ME_" rel="nofollow noreferrer">Attempt This Online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 13 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>ŒlØqiþ§&gt;5IẠ«L
 </code></pre>
 <p>A monadic Link that accepts a list of characters from <code>A-Za-z</code> and yields <code>1</code> if ping-pong or <code>0</code> otherwise.</p>
 <p><strong><a href="https://tio.run/##ASkA1v9qZWxsef//xZJsw5hxacO@wqc@NUnhuqDCq0z///8iRU5ET1dNRU5UIg" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></strong> Or see the <a href="https://tio.run/##AXQAi/9qZWxsef//xZJsw5hxacO@wqc@NUnhuqDCq0z/4bu0LMOHS8aK4oKsWf//c2tlcHRpY2lzbQpFTkRPV01FTlQKcXVhbnRpdHkKZGlzcGVsCmtheWFrcwphCmFhCnRlc3QKV1JPTkcKdGhpc3dpbGxmYWlsCg" rel="nofollow noreferrer" title="Jelly – Try It Online">test-suite</a>.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>20</s> 19 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>20</s> 19 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>žV5δôøJIlδå€üαßIgΘM
 </code></pre>
 <p>Input as a list of characters.<br />
@@ -71,13 +79,6 @@ Ig       # Push the length of the input-list
 M        # Push a copy of the largest value of the stack
          # (which is output implicitly as result)
 </code></pre>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <sup><s>69</s> <s>62</s> <s>60</s> <s>58</s></sup> 55 bytes</h1>
-<p>-7 bytes thanks to <a href="https://codegolf.stackexchange.com/users/20260/xnor">@xnor</a>. I independently arrived at a similar solution (only the first -4 though) since I didn't notice their comment for a while.</p>
-<p>Takes input as a bytestring</p>
-<pre class="lang-python prettyprint-override"><code>lambda x,n=35782400:len({(n:=~n)&gt;&gt;j%32&amp;1for j in x})==1
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=dZDfSsMwFMbxtk9xCCgJtGN_lJVBCwOnCLqJE3YxdxHXlGXL0tikuCH6It7sZj6BL6NPY9ruZq47kAS-3_edc8jnl1qbWSI32xgCeNpmJvb8n7agy-eIwsqVQeui7TfP6_WOYBK_YdkJPiQJw_lpq3nWiJMU5sAlrN5JEDR28e9cFlyynCTK5uqk44AtLpULbKXsrCVVWJu0Zg-3Ym6vaSW4wchDhBT20lncASCTZgw5BUgyY0GMbb8ak9MkYngXUSmXBo_RVffmFrmA7rvDIZqMdz1sbuJCylSaR4nlXmhdVibl7pvfE18vmDJ8yvUSivLKJx_v9PqXg9Fdr_8Ih-wlo9Jws4YKFnGtmACoYgu6pgtdzSjs1x6jlSymQjPHMG2OwtHDoH99NDnj-pULEVMuDuC_dfZg-YN_" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
 <div id="pu3" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 121 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 15.125 bytes</h1>
 <pre><code>[⇩ƛk•5vẇ∑vFT;f¯AI
