--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240710T054825Z
+"   /golfscore                                      20240710T061928Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/274051.html">A Ring of Cubes                                 : 0274051</a>
 <a href="q/274018.html">Keyboard Ping Pong                              : 0274018</a>
 <a href="q/230873.html">Help Alice fix her text!                        : 0230873</a>
 <a href="q/273996.html">Is it an option for the ls utility specified in : 0273996</a>
