--- a/q/274051.html
+++ b/q/274051.html
@@ -26,9 +26,39 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>573</td><td>sed 4.2.2</td><td>240710T061928Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274053#274053">guest430</a></td></tr>
+<tr d-ix="0"><td>041</td><td>Charcoal</td><td>240710T073253Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274054#274054">Neil</a></td></tr>
+<tr d-ix="1"><td>573</td><td>sed 4.2.2</td><td>240710T061928Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274053#274053">guest430</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a>, 573 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 41 bytes</h1>
+<pre><code>ＮθＦ²Ｆ³Ｆθ«Ｆ³Ｍ∨μ¹✳⁺×⁴ι×μ⁻¹κＰ↑”{⊟∨÷ＩＤＲ▶#⟲⁹⁰e
+</code></pre>
+<p><a href="https://tio.run/##NUu7DoIwFJ3hK26YbpMaAjrp6uKAMuh2FyQ1NpYWSssifnstPs5y3u29sa1pVAgH3Xt39N1VWBzYLr0ZC1gy@PD6xwODZ5r8o8pMAk8WOw4F47CXVrROGo218iOeZSdG3HCQsfuaOKykjl3B4cEW7NKk8srJ2krtcHvpOWQwz6SJgCgnvegcciLSMc/i4RVCGVaTegM" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Uses the alternative input scheme where the input is a sixth of the number of cubes. Explanation:</p>
+<pre><code>Ｎθ
+</code></pre>
+<p>Input the integer.</p>
+<pre><code>Ｆ²Ｆ³
+</code></pre>
+<p>Repeat for each of six directions, represented as two major directions (right and left) and three minor directions (<code>-60</code>, <code>0</code> and <code>+60</code> degrees).</p>
+<pre><code>Ｆθ«
+</code></pre>
+<p>Repeat the given integer times.</p>
+<pre><code>Ｆ³Ｍ∨μ¹✳⁺×⁴ι×μ⁻¹κ
+</code></pre>
+<p>Move to the next cube.</p>
+<pre><code>Ｐ↑”{⊟∨÷ＩＤＲ▶#⟲⁹⁰e
+</code></pre>
+<p>Output the cube. The cube is output in an upwards direction to avoid accidentally overwriting a cube above. Given that there are 12 characters to output, a 14-byte compressed string seems as if it will be more efficient than trying to use drawing commands.</p>
+<p>The directions moved in each inner loop are respectively:</p>
+<ul>
+<li>N, N, NE, E (in reverse order)</li>
+<li>E, E, E, E</li>
+<li>E, SE, S, S</li>
+<li>S, S, SW, W (in reverse order)</li>
+<li>W, W, W, W</li>
+<li>W, NW, N, N</li>
+</ul>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a>, 573 bytes</h1>
 <pre><code>h;s!.! / \\!g;x
 s/.$//;s/./&amp;&amp;/g;G;s/\n//p
 s! /!|/!g;y|\\/|/\\|;s/$/|/p;h
@@ -50,7 +80,7 @@ y!/\\!\\/!;s!/! !;s!\\ $!!;s!/ \\!/|\\!gp
 s!\\ /! | !gp
 s!| | ! \\|/!g;s/|$//;:e
 </code></pre>
-<p><a href="https://tio.run/##dVKxasNQDNzfVzyBMa0HH@1oDR3zAxmFIaHGmYLBHpKgf3dPzymYki623r3T3Un2PHyv60VnaSUjm8motzSjrQDlC3WNUQ8s7QpMaSZLHGTd3QwOM@dlxWrSC6/NSMieZZzSTYPu5POo3YnHigQJ2IUg9ZBpykemHaEsLEXvQmFSIdoR91ClDu@c3aD@1rKEFJleVLcYf0Kwm5UHJXKwITqiTOhzQ0UsJ@3OZcS2AdKWoyyD@XpSUWy@oq/gLp9T2i9AaBfSNK5EyiQCl326/3I9w4x6LGshEoDoMqRYe258m5afIZaVwxGJZPT2lhsze28bu9oHaujxnH7H0O6xbfQ5Sw7NB2PsdvsqN@8QgcfXgbe8EmE8/pFuWNfw@AE" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##dVKxasNQDNzfV0hgQuvBRztaQ8f@QEZhSGhwpmBwhiTo392TX0pDSQ229U6n00n2fPhalqPN2qlA3HW0S5nRNYDxhc0Go30y9BMwlZksDZB1DXcE3IPJhtFkR6bdSZAQHadysaQH@Txav@OxIUETDiVIPQib8iFsR0iUodpVKUwq1HrikarUYS5YDerXknNKkRmrarXxxwSrGUVS0gcLsiLDgkFaKuK8s36/jti1QKk@1mXQ30Aq1jYfWbfioe9TeVyAsl1Ks3Gjuk6iCH1095@vu5nRtutaiCSgdj6UXLu0UaflZ8hlSXZEIRmDv0jr7q9d6yd/wwa23ZefMay/1Y3eZ5HUvNHGw26f@WYOaXh8brj61TQT@Y/0h2URKVLv@vi9vgE" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online!</a></p>
 <p>Takes input as unary spaces. Works for inputs of 2 or more, I'll golf it later.</p>
 </div>
 
