--- a/q/274051.html
+++ b/q/274051.html
@@ -26,10 +26,35 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>041</td><td>Charcoal</td><td>240710T073253Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274054#274054">Neil</a></td></tr>
-<tr d-ix="1"><td>573</td><td>sed 4.2.2</td><td>240710T061928Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274053#274053">guest430</a></td></tr>
+<tr d-ix="0"><td>572</td><td>sed 4.2.2</td><td>240710T061928Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274053#274053">guest430</a></td></tr>
+<tr d-ix="1"><td>041</td><td>Charcoal</td><td>240710T073253Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274054#274054">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 41 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a>, <s>573</s> 572 bytes</h1>
+<pre><code>h;s!.! / \\!g;x;s/.//;s/./  /g;G;s/\n//p
+s! /!|/!g;y|\\/|/\\|;s/$/|/p;h
+s!\\ /! | !gp
+x;s! /|!|/ !g;:a;s!$!\\!;s! |!/ !p
+s/  \\/   /;s!/  !   !;y!/\\!\\/!;:e
+s!|\\ /|!|   |!;s/ | /   /;te;s! \\!|\\!;s/$/|/p
+s!\\ /! | !gp
+s!| | |!|\\|/ !;s!! \\|/ !
+/^ *  |/ta;:b;s/\n.*//
+s!/  !/ \\!
+s/^|/ /;s! \? \\|!/ \\|!2p
+y|\\/|/\\|;s!/! !;s!\\ $!!;s!/ !/|!;s! \\!|\\!;p
+s!\\ /! | !gp
+s!| | |! \\|/ !g;T;s! | |!\\|/!;t
+G;s/ *| | /  /g;s/   |/\\/
+T;s/^\( *\\\).*\n\1/&amp;/;Tb
+s/\n.*//;:z;s!/    !/ \\ /!;tz;p
+y!/\\!\\/!;s!/! !;s!\\ $!!;s!/ \\!/|\\!gp
+s!\\ /! | !gp
+s!| | ! \\|/!g;s/|$//;:
+</code></pre>
+<p><a href="https://tio.run/##dVGxbsJQDNz9Fc9SVNoMcYEujYeO/QFGCykUGiYaKREU5H9Pzy9UQhVdEsc@350v/W47jnvtueIkyYxb/dZeKpH8TElafUdpB5GOeoDYBaCzm4mLmWNYoOp0j7EZAMkTtx2BB3AHHp9aN/gsAOBoO6MJPgiAJ0EGXbwZJeuZQQyosNY7sHrQgghDx7pAYNoZdkEGrGfeycgfG1hH5QEJJ1iIjShJ1qkEpQyN1pt8ZFWK0OQkpwGHa0Aly7zFXu47Lzq6jYAhF9QQLpjzLSzOt@7@83U10@oqB4NONFgHitxT6dO1@A@RVgpBIWBlbY@pNLOnqrSDzeVBdLWh3yu0vkyRXk9JQXmBi5tw79nGTMJve9/vZJfDjBehMo5NQzRfLImazceW6PP0NTvrcbZ8eX49NsPpBw" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online!</a></p>
+<p>Takes input as any unary character. Works for inputs of 2 or more. I'll add an explanation later, but basically it just outputs each line after it makes it. The little 'humps' between outputs in the test cases is the output for an input of 0; you can remove the extra newlines in the input if you want to see the output without them.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 41 bytes</h1>
 <pre><code>ＮθＦ²Ｆ³Ｆθ«Ｆ³Ｍ∨μ¹✳⁺×⁴ι×μ⁻¹κＰ↑”{⊟∨÷ＩＤＲ▶#⟲⁹⁰e
 </code></pre>
 <p><a href="https://tio.run/##NUu7DoIwFJ3hK26YbpMaAjrp6uKAMuh2FyQ1NpYWSssifnstPs5y3u29sa1pVAgH3Xt39N1VWBzYLr0ZC1gy@PD6xwODZ5r8o8pMAk8WOw4F47CXVrROGo218iOeZSdG3HCQsfuaOKykjl3B4cEW7NKk8srJ2krtcHvpOWQwz6SJgCgnvegcciLSMc/i4RVCGVaTegM" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Uses the alternative input scheme where the input is a sixth of the number of cubes. Explanation:</p>
@@ -57,31 +82,6 @@
 <li>W, W, W, W</li>
 <li>W, NW, N, N</li>
 </ul>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a>, 573 bytes</h1>
-<pre><code>h;s!.! / \\!g;x
-s/.$//;s/./&amp;&amp;/g;G;s/\n//p
-s! /!|/!g;y|\\/|/\\|;s/$/|/p;h
-s!\\ /! | !gp
-x;s! /|!|/ !g;:a;s!$!\\!;s! |!/ !p
-s/  \\/   /;s!/  !   !;y!/\\!\\/!;:;s!|\\ /|!|   |!;s/ | /   /;t;s! \\!|\\!;s/$/|/p
-s!\\ /! | !gp
-s!| | |!|\\|/ !;s!! \\|/ !
-/^ *  |/ta;:b;s/\n.*//
-s!/  !/ \\!
-s/^|/ /;s! \? \\|!/ \\|!2p
-y|\\/|/\\|;s!/! !;s!\\ $!!;s!/ !/|!;s! \\!|\\!;p
-s!\\ /! | !gp
-s!| | |! \\|/ !g;T;s! | |!\\|/!;te
-G;s/ *| | /  /g;s/   |/\\/
-T;s/^\( *\\\).*\n\1/&amp;/;Tb
-s/\n.*//;:z;s!/    !/ \\ /!;tz;p
-y!/\\!\\/!;s!/! !;s!\\ $!!;s!/ \\!/|\\!gp
-s!\\ /! | !gp
-s!| | ! \\|/!g;s/|$//;:e
-</code></pre>
-<p><a href="https://tio.run/##dVKxasNQDNzfV0hgQuvBRztaQ8f@QEZhSGhwpmBwhiTo392TX0pDSQ229U6n00n2fPhalqPN2qlA3HW0S5nRNYDxhc0Go30y9BMwlZksDZB1DXcE3IPJhtFkR6bdSZAQHadysaQH@Txav@OxIUETDiVIPQib8iFsR0iUodpVKUwq1HrikarUYS5YDerXknNKkRmrarXxxwSrGUVS0gcLsiLDgkFaKuK8s36/jti1QKk@1mXQ30Aq1jYfWbfioe9TeVyAsl1Ks3Gjuk6iCH1095@vu5nRtutaiCSgdj6UXLu0UaflZ8hlSXZEIRmDv0jr7q9d6yd/wwa23ZefMay/1Y3eZ5HUvNHGw26f@WYOaXh8brj61TQT@Y/0h2URKVLv@vi9vgE" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online!</a></p>
-<p>Takes input as unary spaces. Works for inputs of 2 or more, I'll golf it later.</p>
 </div>
 
 <table id="st">
