--- a/q/82526.html
+++ b/q/82526.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>075</td><td>R</td><td>240709T181551Z</td><td><a href="https://codegolf.stackexchange.com/questions/82526/sum-it-up-with-a-digital-triangle/274042#274042">int 21h </a></td></tr>
+<tr d-ix="0"><td>074</td><td>R</td><td>240709T181551Z</td><td><a href="https://codegolf.stackexchange.com/questions/82526/sum-it-up-with-a-digital-triangle/274042#274042">int 21h </a></td></tr>
 <tr d-ix="1"><td>020</td><td>Pip s</td><td>210825T180547Z</td><td><a href="https://codegolf.stackexchange.com/questions/82526/sum-it-up-with-a-digital-triangle/233737#233737">DLosc</a></td></tr>
 <tr d-ix="2"><td>160</td><td>Java JDK</td><td>210825T065437Z</td><td><a href="https://codegolf.stackexchange.com/questions/82526/sum-it-up-with-a-digital-triangle/233707#233707">0xff</a></td></tr>
 <tr d-ix="3"><td>080</td><td>Zsh</td><td>210819T032912Z</td><td><a href="https://codegolf.stackexchange.com/questions/82526/sum-it-up-with-a-digital-triangle/233558#233558">roblogic</a></td></tr>
@@ -61,11 +61,14 @@
 <tr d-ix="32"><td>018</td><td>Jelly</td><td>160610T005755Z</td><td><a href="https://codegolf.stackexchange.com/questions/82526/sum-it-up-with-a-digital-triangle/82529#82529">Dennis</a></td></tr>
 <tr d-ix="33"><td>018</td><td>Pyth</td><td>160610T002020Z</td><td><a href="https://codegolf.stackexchange.com/questions/82526/sum-it-up-with-a-digital-triangle/82527#82527">Maltysen</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 75 bytes</h1>
-<pre class="lang-r prettyprint-override"><code>\(x,n=sum(x|1))for(j in n:1){cat(strrep(&quot; &quot;,n-j),x%%10,&quot;\n&quot;);x=x[-j]+x[-1]}
+<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s><a href="https://ato.pxeger.com/run?1=RU5bioNAEPz3FIMgdLMlzBiDJjInCDnB6ocra1B2J0ENDCSeJCy4CzlUbrM-9vFTVV1dVPftsxm-Sn0_d6UfP3YpWRjdnt_JXhVzeWyoFpURZqv4UuQdtV3TvJ7IFS6MXzOs5ykJNzUuJ1bbZ7_OnkZUWf9T-XHQKeV8KUdIpoY52ztWv1VtRwVJhlOQQsAoKEY0kYScSCFcbAn160j8LQOsEP7LNeJp2EAEECHEGmI162C-EI0BiQ2z47zofX6iAywvTw7Dwt8" rel="nofollow noreferrer">75</a></s> 74 bytes</h1>
+<ul>
+<li>-1 byte thanks to <a href="https://codegolf.stackexchange.com/users/55372/pajonk">pajonk</a></li>
+</ul>
+<pre class="lang-r prettyprint-override"><code>`?`=\(x,n=j)if(j&lt;-sum(x|1)){cat(strrep(&quot; &quot;,n-j),x%%10,&quot;\n&quot;);x[-j]+x[-1]?n}
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=RU5bioNAEPz3FIMgdLMlzBiDJjInCDnB6ocra1B2J0ENDCSeJCy4CzlUbrM-9vFTVV1dVPftsxm-Sn0_d6UfP3YpWRjdnt_JXhVzeWyoFpURZqv4UuQdtV3TvJ7IFS6MXzOs5ykJNzUuJ1bbZ7_OnkZUWf9T-XHQKeV8KUdIpoY52ztWv1VtRwVJhlOQQsAoKEY0kYScSCFcbAn160j8LQOsEP7LNeJp2EAEECHEGmI162C-EI0BiQ2z47zofX6iAywvTw7Dwt8" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<p>A function that accepts a vector of the integers and prints a formatted triangle. Conveniently, <code>cat</code> pastes spaces between the numbers by default. However, to produce the trailing spaces, I had to use <code>strrep</code>  instead of <code>rep</code> since <code>strrep</code> outputs a single string, whereas <code>rep</code> outputs a vector of spaces separated by the spaces inserted by <code>cat</code>.</p>
+<p><a href="https://ato.pxeger.com/run?1=RU5bCsJAEPvvKZaCMIMp7NZKK7r4L3gCFazFikWLtBUW1JOIUAUP5W3sw8dPksmEzFzvWfmI9fNYxE7wmizHSz0ng1QnvI0pGTn5cU_mrJhPUVhQXmTZ-kC2sJE6CcN0OkrCnqc2D83MSRbdCtVinF4-jbdN1RfyKa5gWDc02Ytl9G6bFxSRZFgRKbiMiAL4NUnImhS81pZQX0fit3TRg_eXfQT1MIBwITyIPkSv0W5zwa8CEgNmy1rpaXigDQy3T5Zly28" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>A function that accepts a vector of the integers and prints a formatted triangle. Conveniently, <code>cat</code> pastes spaces between the numbers by default. However, to produce the trailing spaces, I had to use <code>strrep</code>  instead of <code>rep</code> since <code>strrep</code> outputs a single string, whereas <code>rep</code> makes a mess: it outputs a vector of space characters which are separated by the spaces inserted by <code>cat</code>.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/dloscutoff/pip" rel="nofollow noreferrer">Pip</a> <code>-s</code>, 20 bytes</h1>
 <pre><code>Wg&amp;OlPBxg:_+BMP Pg%t
