--- a/q/274051.html
+++ b/q/274051.html
@@ -26,10 +26,19 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>572</td><td>sed 4.2.2</td><td>240710T061928Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274053#274053">guest430</a></td></tr>
-<tr d-ix="1"><td>041</td><td>Charcoal</td><td>240710T073253Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274054#274054">Neil</a></td></tr>
+<tr d-ix="0"><td>185</td><td>JavaScript ES6</td><td>240710T124848Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274057#274057">Arnauld</a></td></tr>
+<tr d-ix="1"><td>572</td><td>sed 4.2.2</td><td>240710T061928Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274053#274053">guest430</a></td></tr>
+<tr d-ix="2"><td>041</td><td>Charcoal</td><td>240710T073253Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274054#274054">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a>, <s>573</s> 572 bytes</h1>
+<div id="pu0" class="pu"><h1>JavaScript (ES6), 185 bytes</h1>
+<p>Builds the output character by character.</p>
+
+<pre class="lang-javascript prettyprint-override"><code>n=&gt;(y=h=n*6-2,p=n*2-1,g=x=&gt;y?` |/\\
+`[X=w-x-p,s=y&gt;h/2,q=x-p&gt;5&amp;X&gt;4,x--?x&lt;p|X&lt;0|y&gt;4&amp;y&lt;h-3&amp;q?0:`1302203${y&lt;h&amp;y!=4*q}1010`[y%3*4+(X+2*(y%3&amp;!s)&amp;3)]:(p-=y--%3&amp;&amp;2*s-1,x=w,4)]+g(x):&quot;&quot;)(w=n*8-3)
+</code></pre>
+<p><a href="https://tio.run/##XY5NboMwGET3OYWDWsvGdmNst6oIH1wDKYlElPLTChkIUWMr5OzU667ezJvN/Jx/z/Pl@j3ehB2@6rWB1UJOPHRg4w@h@BioRMJbcJD7okLL7njcVIcS7sKJkc/g826n@ASh5e@4zA13QhQuG5cyk4vPDfZZJzSeCplWiZZKSf3yCA77LZh4eiYykdXBv@rYMFIyFZOQ8XamWNNTSkYBXohgsIrn8MTBnRt6Yi1xNI0iSu7h4qfQdG2GK@nrG7IIkNoHZIBMIGMUPTYIXQY7D3391g8tiSxEiCFL9/@Ghlga5HP9Aw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a>, <s>573</s> 572 bytes</h1>
 <pre><code>h;s!.! / \\!g;x;s/.//;s/./  /g;G;s/\n//p
 s! /!|/!g;y|\\/|/\\|;s/$/|/p;h
 s!\\ /! | !gp
@@ -54,7 +63,7 @@ s!| | ! \\|/!g;s/|$//;:
 <p><a href="https://tio.run/##dVGxbsJQDNz9Fc9SVNoMcYEujYeO/QFGCykUGiYaKREU5H9Pzy9UQhVdEsc@350v/W47jnvtueIkyYxb/dZeKpH8TElafUdpB5GOeoDYBaCzm4mLmWNYoOp0j7EZAMkTtx2BB3AHHp9aN/gsAOBoO6MJPgiAJ0EGXbwZJeuZQQyosNY7sHrQgghDx7pAYNoZdkEGrGfeycgfG1hH5QEJJ1iIjShJ1qkEpQyN1pt8ZFWK0OQkpwGHa0Aly7zFXu47Lzq6jYAhF9QQLpjzLSzOt@7@83U10@oqB4NONFgHitxT6dO1@A@RVgpBIWBlbY@pNLOnqrSDzeVBdLWh3yu0vkyRXk9JQXmBi5tw79nGTMJve9/vZJfDjBehMo5NQzRfLImazceW6PP0NTvrcbZ8eX49NsPpBw" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online!</a></p>
 <p>takes input as any unary character. works for inputs of 2 or more. basically it just outputs each line after it makes it. the little 'humps' between outputs in the test cases is the output for an input of 0; you can remove the extra newlines in the input if you want to see the output without them.</p>
 <p>here's with trying to output three lines at a time:</p>
-<h3><s><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a>, 546 bytes</s></h3>
+<h3><s><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a>, 566 bytes</s></h3>
 <pre><code>h;s!.! / \\!g;x;s/.//;s/./  /g;G;s/\n//p
 s! /!|/!g;y|\\/|/\\|;s/$/|/p;h
 s!\\ /! | !gp
@@ -71,14 +80,13 @@ s!| | | \( *\) | | |!&amp;\n \\|/ \\\1/ \\|/!;be
 :k;s/^/  /gm;s!\\    !\\!;s!|    !|!g
 :e;s!\n[^\n]*$!&amp;&amp;!;G;s![^ \n]! !23g
 T;s!\n\( *\)\n\1!!;t;s/\n *\n *//p;tk
-:;p;s/^/  /gm;s/|  .*//gm;s!/ \\.*$!/!
+:;s!\\    !\\ / \\!;t;p;s/^/  /gm;s/|  .*//gm;s!/ \\.*$!/!
 :q;s/....$/&amp;&amp;/mg
-#something else here to loop :q until the bottom line of cubes is filled in
 </code></pre>
-<p><a href="https://tio.run/##RVFBasMwELzrFVowJvXBS5qb9wH5QG7ZBhwabAgxbpxDC/t3d3Ztt8IS0ux4ZzSabp/z3MtENWXOqtTJt0xcM8eaM3dyxFYH5jFNIJExSD@mysaqhmKB3Sg9yqogZMvUjQl9QDfwcZSmxbEAgRw2Auj9XNMoY6zKVlfQPrqjWnd1pW866J50b97byD3ECLd/IOO3Ugf/GJQVN1gxOnTpFKJxCkWoH@T0dGaAC4aGB7n2CV5HWLlAhB@duMusZvBYhlNgTS9Rf7WpeYKbTQdYyMZbz6y7DPerKoxtGrpfLJBcb6m5u1Dk/JDIzwWWlCz2Rl1qbl4bzhcdPqqCypIiofMlA6BM7@sVEVWIRmQkr3g4AJh4PnndU7PcbBNkaHjgIe62arRnSs2XPz9GwWWJDOa5bVO7zG39H78" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##TVJBboNADLzvK9YSQikHrDQ3/IB8ILe4kYgagRQF0ZBDK/nvdGxImxW72h0PnmGW6fI5z71MVFPmrEqdfMvENXOsOXMne2x1YB7TBBIZg/RjqmysaigW2I3So6wKQrZM3ZjQB3QDH0dpWhwLEMhhI4DezzWNMsaqbHUF7b07qnVTV/qmg25Jt@a9jdxDjHD7BzJeK3Xwh0FZcYMVo12XDiEap1CE@k4Od2cGuGBouJNzn@B1hJUTRPjWibvMagaPZTgF1vQS9Uebmju42XSAhWz87Jl1k@F@VYWxp4ZuFwsk50tqri4UOd8k8nOBJSWLvVGXmovXhuNJh4@qoLKkSOh4ygAo0/v6iYgqRCMykkdcHABMXJ88rql5FVkyBG18NcHQ9UsIQ86oIcmUmi//JTAKLkvkMs9tm9plPtf/8Qs" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online!</a></p>
 <p>this one doesn't work yet (the last line of cubes is proving particularly hard to measure) but doing it this way might make it easier to golf.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 41 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 41 bytes</h1>
 <pre><code>ＮθＦ²Ｆ³Ｆθ«Ｆ³Ｍ∨μ¹✳⁺×⁴ι×μ⁻¹κＰ↑”{⊟∨÷ＩＤＲ▶#⟲⁹⁰e
 </code></pre>
 <p><a href="https://tio.run/##NUu7DoIwFJ3hK26YbpMaAjrp6uKAMuh2FyQ1NpYWSssifnstPs5y3u29sa1pVAgH3Xt39N1VWBzYLr0ZC1gy@PD6xwODZ5r8o8pMAk8WOw4F47CXVrROGo218iOeZSdG3HCQsfuaOKykjl3B4cEW7NKk8srJ2krtcHvpOWQwz6SJgCgnvegcciLSMc/i4RVCGVaTegM" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Uses the alternative input scheme where the input is a sixth of the number of cubes. Explanation:</p>
