--- a/q/274051.html
+++ b/q/274051.html
@@ -26,22 +26,25 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>314</td><td>Python 3.8 prerelease</td><td>240710T191252Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274062#274062">squarero</a></td></tr>
+<tr d-ix="0"><td>259</td><td>Python 3.8 prerelease</td><td>240710T191252Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274062#274062">squarero</a></td></tr>
 <tr d-ix="1"><td>182</td><td>JavaScript ES6</td><td>240710T124848Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274057#274057">Arnauld</a></td></tr>
 <tr d-ix="2"><td>079</td><td>K ngn/k</td><td>240710T125605Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274058#274058">ovs</a></td></tr>
 <tr d-ix="3"><td>572</td><td>sed 4.2.2</td><td>240710T061928Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274053#274053">guest430</a></td></tr>
 <tr d-ix="4"><td>041</td><td>Charcoal</td><td>240710T073253Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274054#274054">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 314 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 314 </s> 259 bytes</h1>
+<p><em>-55 bytes by encoding the character positions as a list.</em></p>
 
 <pre class="lang-python prettyprint-override"><code>def f(n):
  l=[13*n*[' ']for i in range(10*n)];x,y=2*n,0
  for d in zip([8,6,2,0,2,6],[0,3,3,0,-3,-3]):
-  for s in range(n):l[y][x+3],l[y][x+1],l[y+1][x],l[y+2][x],l[y+1][x+1],l[y+1][x+3],l[y+2][x+2],l[y+3][x+2],l[y+3][x+1],l[y+3][x+3],l[y+1][x+4],l[y+2][x+4]='\/||'*3;x+=d[0]-4;y+=d[1]
+  for s in range(n):
+   for N,t in enumerate([3,1,5,10,6,8,12,17,16,18,9,14]):l[y+t//5][x+t%5]='\/||'[N%4]
+   x+=d[0]-4;y+=d[1]
  for L in l:print(''.join(L))
 </code></pre>
 <p>First example is inputted as 1.</p>
-<p><a href="https://tio.run/##XY/dDoIwDIXvfYrd7ceqGyPESHgD32D2wgTRGVIIegHGd8cNjRLTtfuSntOt7XC/NGS3bTeO5alilSC5W7C6cMYqUo4zjlXTMc88se5I55MwWpHEvIehSBSBXrAoKKPg4VvhtpBBAjpkhuA02BAaVjYcjLMn@e03LzxYuwFdv7QIHzIThcv1b0q@ZP76H9ekCGVi@89mxnbmTWfeFAt@2DyfXNm8Xxal07hK8yGSwfeS@/jretd2nu6C8/W18ST2Uo6VSOT4Ag" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##RY5BboMwEEX3OYU3kW2YFA8GShNxgygXcL2IhEldUYNcV4Iqd6d2sqhmRvr6@np/5jV8TE62s9@23gxkYI4fd2TsFMrMZYoSqofJE0usI/7qboahyBzXpwXWrswciB1JgT4Ffu3MVAsNlCDiNRqUABlHwEHG1Yn9iH//8x6FT/cCIfnG/XwZfw2GKQkINaCIzBawBHwFbABbeAOsIm5Uax6KotZqycO@1h19L@53qi77Sifqkne9EvpQndakUD@/Paea8Th76wKj9OVzso6dOd8GVvLtDw" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1>JavaScript (ES6), 182 bytes</h1>
 <p>Builds the output character by character.</p>
