--- a/q/211925.html
+++ b/q/211925.html
@@ -49,6 +49,7 @@
 </code></pre>
 <p><a href="https://tio.run/##VYuxCoMwFEV3P8OAU0Jp9xaLe7HoFlJ4SZ41oAmksYvor6eJW6dz7oE7QxhxhmAUxOEau2Xmd/nhhHMjBEtgiYKutPf8/CLidNnoaugmqvhcDIa69cYGTthtqHvXjOBBBfSN01gTUe2dAruvRQlQ0qKUIDNAqmMqCRqzjDhN7ijpx95uGvKw@EXvtHY@ic3l8V@KLf4A" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
 <p>Input a list of integers.</p>
+<p><span class="math-container">$$\sum_{i=1}^{d}\left(d-i+1\right)|s_i-s_{l-i+1}|=\sum_{j=1}^{d}\sum_{i=1}^{j}|s_i-s_{l-i+1}|.$$</span></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 53 bytes</h1>
 
